force-app/main/default/objects/Deal_Registration__c/fields/ETM_Territory__c.field-meta.xml
<CustomField>
    <fullName>ETM_Territory__c</fullName>
    <description>ETM Territory</description>
    <formula>IF( !ISBLANK(Company_Name__c) , Company_Name__r.ETM_Territory__c, PatchManager__r.TLevel4__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETM Territory</label>
    <type>Text</type>
</CustomField>