force-app/main/default/objects/Deal_Registration__c/fields/ETM_Theater__c.field-meta.xml
<CustomField>
    <fullName>ETM_Theater__c</fullName>
    <description>Account ETM Theatre</description>
    <formula>IF( !ISBLANK(Company_Name__c) , Company_Name__r.ETM_Theatre__c, TEXT(PatchManager__r.TLevel1__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETM Theater</label>
    <type>Text</type>
</CustomField>