force-app/main/default/objects/Deal_Registration__c/fields/Focused_Partner__c.field-meta.xml
<CustomField>
    <fullName>Focused_Partner__c</fullName>
    <formula>Partner_Lookup__r.Focused_Partner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Focused Partner</label>
    <type>Checkbox</type>
</CustomField>