force-app/main/default/objects/Deal_Registration__c/fields/Global_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Global_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://rubrik.atlassian.net/browse/PRIT24-806</description>
    <label>GAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Registrations6</relationshipName>
    <type>Lookup</type>
</CustomField>