force-app/main/default/objects/Deal_Registration__c/fields/GSI_Deal_Registration__c.field-meta.xml
<CustomField>
    <fullName>GSI_Deal_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://rubrik.atlassian.net/browse/PRIT24-806</description>
    <label>GSI Deal Registration</label>
    <type>Checkbox</type>
</CustomField>