force-app/main/default/objects/Deal_Registration__c/fields/GSI_NDA__c.field-meta.xml
<CustomField>
    <fullName>GSI_NDA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Applicable for Internal Deal Registration</description>
    <label>GSI - NDA</label>
    <type>Checkbox</type>
</CustomField>