force-app/main/default/objects/Deal_Registration__c/fields/Industry_Category__c.field-meta.xml
<CustomField>
    <fullName>Industry_Category__c</fullName>
    <formula>IF( ISPICKVAL(Customer_Category__c , &apos;State &amp; Local Govt/Education&apos; ) || ISPICKVAL(Customer_Category__c ,&apos;Federal Govt&apos; ) , &apos;SLG&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Category</label>
    <type>Text</type>
</CustomField>