force-app/main/default/objects/Deal_Registration__c/fields/IsPartnerOwned__c.field-meta.xml
<CustomField>
    <fullName>IsPartnerOwned__c</fullName>
    <formula>If(Owner:User.Profile.Name = &apos;Rubrik Partner Community User&apos;,&apos;PartnerOwned&apos;, &apos;RubrikOwned&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsPartnerOwned</label>
    <type>Text</type>
</CustomField>