force-app/main/default/objects/Deal_Registration__c/fields/L2A_Confidence_Code__c.field-meta.xml
<CustomField>
    <fullName>L2A_Confidence_Code__c</fullName>
    <label>L2A Confidence Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>