force-app/main/default/objects/Deal_Registration__c/fields/L2A_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>L2A_Error_Message__c</fullName>
    <label>L2A Error Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>