force-app/main/default/objects/Deal_Registration__c/fields/L2A_Match_Criteria__c.field-meta.xml
<CustomField>
    <fullName>L2A_Match_Criteria__c</fullName>
    <label>L2A Match Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>