force-app/main/default/objects/Deal_Registration__c/fields/L2A_Match_Status__c.field-meta.xml
<CustomField>
    <fullName>L2A_Match_Status__c</fullName>
    <label>L2A Match Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>