force-app/main/default/objects/Deal_Registration__c/fields/L2A_Matched_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>L2A_Matched_Account_Id__c</fullName>
    <label>L2A Matched Account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>