force-app/main/default/objects/Deal_Registration__c/fields/Lead_Share_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Lead_Share_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PRIT24-356</description>
    <label>Lead Share Campaign</label>
    <type>Checkbox</type>
</CustomField>