force-app/main/default/objects/Deal_Registration__c/fields/Matching_Deal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Matching_Deal_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matching Deal Registration</label>
    <referenceTo>Deal_Registration__c</referenceTo>
    <relationshipLabel>Deal Registrations</relationshipLabel>
    <relationshipName>Deal_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>