force-app/main/default/objects/Deal_Registration__c/fields/National_Partner__c.field-meta.xml
<CustomField>
    <fullName>National_Partner__c</fullName>
    <formula>Partner_Lookup__r.National_Partner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Partner</label>
    <type>Checkbox</type>
</CustomField>