force-app/main/default/objects/Deal_Registration__c/fields/Need__c.field-meta.xml
<CustomField>
    <fullName>Need__c</fullName>
    <label>(DEPRECATED)  Need</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instant recover</fullName>
            </value>
            <value>
                <fullName>Cloud archival</fullName>
            </value>
            <value>
                <fullName>Scale out</fullName>
            </value>
            <value>
                <fullName>Simplicity</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Cost savings</fullName>
            </value>
            <value>
                <fullName>Replication</fullName>
            </value>
            <value>
                <fullName>Reliability</fullName>
            </value>
            <value>
                <fullName>Ease of install</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>