force-app/main/default/objects/Deal_Registration__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Internal Rubrik DR notes</label>
    <type>TextArea</type>
</CustomField>