force-app/main/default/objects/Deal_Registration__c/fields/Number_of_protected_machines__c.field-meta.xml
<CustomField>
    <fullName>Number_of_protected_machines__c</fullName>
    <label>(DEPRECATED) Amount of Data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;10TB</fullName>
            </value>
            <value>
                <fullName>10TB - 25TB</fullName>
            </value>
            <value>
                <fullName>25TB - 50TB</fullName>
            </value>
            <value>
                <fullName>50TB - 75TB</fullName>
            </value>
            <value>
                <fullName>75TB - 100TB</fullName>
            </value>
            <value>
                <fullName>25TB - 100TB</fullName>
            </value>
            <value>
                <fullName>100TB - 500TB</fullName>
            </value>
            <value>
                <fullName>100+TB</fullName>
            </value>
            <value>
                <fullName>500TB - 1PB</fullName>
            </value>
            <value>
                <fullName>&gt;1PB</fullName>
            </value>
            <value>
                <fullName>1,000 - 5,000</fullName>
                <isActive>false</isActive>
                <label>1,000 - 5,000</label>
            </value>
            <value>
                <fullName>150 - 250</fullName>
                <isActive>false</isActive>
                <label>150 - 250</label>
            </value>
            <value>
                <fullName>250 - 500</fullName>
                <isActive>false</isActive>
                <label>250 - 500</label>
            </value>
            <value>
                <fullName>500 - 1,000</fullName>
                <isActive>false</isActive>
                <label>500 - 1,000</label>
            </value>
            <value>
                <fullName>&lt;150</fullName>
                <isActive>false</isActive>
                <label>&lt;150</label>
            </value>
            <value>
                <fullName>&gt;5,000</fullName>
                <isActive>false</isActive>
                <label>&gt;5,000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>