force-app/main/default/objects/Deal_Registration__c/fields/OEM_L1_Approver__c.field-meta.xml
<CustomField>
    <fullName>OEM_L1_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://rubrik.atlassian.net/browse/PRIT24-648</description>
    <label>OEM L1 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Registrations4</relationshipName>
    <type>Lookup</type>
</CustomField>