force-app/main/default/objects/Deal_Registration__c/fields/OEM_SubType__c.field-meta.xml
<CustomField>
    <fullName>OEM_SubType__c</fullName>
    <formula>TEXT( Distributor__r.OEM_Subtype__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OEM SubType</label>
    <type>Text</type>
</CustomField>