force-app/main/default/objects/Deal_Registration__c/fields/Opp_Deal_Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Opp_Deal_Registration_Type__c</fullName>
    <formula>TEXT(Opportunity__r.Deal_Registration_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Deal Initiated Type</label>
    <type>Text</type>
</CustomField>