force-app/main/default/objects/Deal_Registration__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity linked to Deal Reg</description>
    <label>Opportunity</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Please enter open opportunity name without an approved deal registration</errorMessage>
        <filterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>7 Closed Won, 7 Closed Lost</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Deal Registrations</relationshipLabel>
    <relationshipName>Deal_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>