force-app/main/default/objects/Deal_Registration__c/fields/Opportunity_Amount_TVC__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount_TVC__c</fullName>
    <description>Opportunity Amount TCV</description>
    <formula>Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Amount (TCV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>