force-app/main/default/objects/Deal_Registration__c/fields/Opportunity_Created_from_DR__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Created_from_DR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://rubrik.atlassian.net/browse/PRIT24-870</description>
    <label>Opportunity Created from DR</label>
    <type>Checkbox</type>
</CustomField>