force-app/main/default/objects/Deal_Registration__c/fields/Opportunity_Details__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Details__c</fullName>
    <inlineHelpText>(environment size, incumbent solution, business drivers, etc.)</inlineHelpText>
    <label>Characteristic/specifics of opportunity</label>
    <type>TextArea</type>
</CustomField>