force-app/main/default/objects/Deal_Registration__c/fields/Partner_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contract_Status__c</fullName>
    <formula>TEXT(Partner_Lookup__r.Contract_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Contract Status</label>
    <type>Text</type>
</CustomField>