force-app/main/default/objects/Deal_Registration__c/fields/Partner_Portal_Link__c.field-meta.xml
<CustomField>
    <fullName>Partner_Portal_Link__c</fullName>
    <formula>HYPERLINK($Label.Partner_Portal_Link+&quot;recordId=&quot;+Id+&quot;&amp;recordName=&quot;+Name,$Label.Partner_Portal_Link+&quot;recordId=&quot;+Id+&quot;&amp;recordName=&quot;+Name,&quot;View&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Portal Link</label>
    <type>Text</type>
</CustomField>