force-app/main/default/objects/Deal_Registration__c/fields/Partner_Rep__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep__c</fullName>
    <label>Partner Sales Rep Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>