force-app/main/default/objects/Deal_Registration__c/fields/Partner_Rep_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep_Email_Address__c</fullName>
    <label>Partner Rep Email Address</label>
    <type>Email</type>
</CustomField>