force-app/main/default/objects/Deal_Registration__c/fields/Partner_Rep_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep_Phone_Number__c</fullName>
    <label>Partner Rep Phone Number</label>
    <type>Phone</type>
</CustomField>