force-app/main/default/objects/Deal_Registration__c/fields/Partner_Rep_Title__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep_Title__c</fullName>
    <label>Partner Rep Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>