force-app/main/default/objects/Deal_Registration__c/fields/Partner_SE_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_SE_Email__c</fullName>
    <label>Partner SE Email</label>
    <type>Email</type>
</CustomField>