force-app/main/default/objects/Deal_Registration__c/fields/PatchManager__c.field-meta.xml
<CustomField>
    <fullName>PatchManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PatchManager</label>
    <referenceTo>PatchManager__c</referenceTo>
    <relationshipLabel>Deal Registrations</relationshipLabel>
    <relationshipName>Deal_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>