force-app/main/default/objects/Deal_Registration__c/fields/PID_Meeting_Task__c.field-meta.xml
<CustomField>
    <fullName>PID_Meeting_Task__c</fullName>
    <description>SF-289
Converted from PID Meeting Task</description>
    <formula>Opportunity__r.ACV_Amount__c</formula>
    <label>Opportunity Amount (ACV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>