force-app/main/default/objects/Deal_Registration__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Registrations (Primary Contact)</relationshipLabel>
    <relationshipName>Deal_Registrations1</relationshipName>
    <type>Lookup</type>
</CustomField>