force-app/main/default/objects/Deal_Registration__c/fields/Primary_Deal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Primary_Deal_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked when DR is the primary deal on the opportunity</description>
    <label>Primary Deal Registration</label>
    <type>Checkbox</type>
</CustomField>