force-app/main/default/objects/Deal_Registration__c/fields/Primary_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product_Type__c</fullName>
    <description>Created as part of PRIT26-543</description>
    <inlineHelpText>Identify the main product type of interest</inlineHelpText>
    <label>Primary Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise Data Protection</fullName>
            </value>
            <value>
                <fullName>Cloud Data Protection</fullName>
            </value>
            <value>
                <fullName>NAS Protection</fullName>
            </value>
            <value>
                <fullName>SaaS Data Protection</fullName>
            </value>
            <value>
                <fullName>RCV</fullName>
            </value>
            <value>
                <fullName>Identity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>