force-app/main/default/objects/Deal_Registration__c/fields/Program_Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Registration_Type__c</fullName>
    <label>Program Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teaming Agreement</fullName>
            </value>
            <value>
                <fullName>Alliance Referral</fullName>
            </value>
            <value>
                <fullName>Alliance Deal Acceleration</fullName>
            </value>
            <value>
                <fullName>Cyber Security Alliance Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>