force-app/main/default/objects/Deal_Registration__c/fields/PS_Escalated__c.field-meta.xml
<CustomField>
    <fullName>PS_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the DR was Partner Source Escalated</description>
    <label>PS Escalated?</label>
    <type>Checkbox</type>
</CustomField>