force-app/main/default/objects/Deal_Registration__c/fields/Purchase_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Timeframe__c</fullName>
    <label>(DEPRECATED) Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-3 Months</fullName>
            </value>
            <value>
                <fullName>3-6 Months</fullName>
            </value>
            <value>
                <fullName>6-12 Months</fullName>
            </value>
            <value>
                <fullName>&gt;12 Months</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>