force-app/main/default/objects/Deal_Registration__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>We no longer need the TART fields that come from Patch Manager (confirmed by ChannelOps - Gregg Schroeder).</description>
    <formula>TEXT(PatchManager__r.TLevel3__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(DEPRECATED) Region</label>
    <type>Text</type>
</CustomField>