force-app/main/default/objects/Deal_Registration__c/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Sourced</fullName>
            </value>
            <value>
                <fullName>Value Add</fullName>
            </value>
            <value>
                <fullName>PSNL</fullName>
                <isActive>false</isActive>
                <label>PSNL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>