force-app/main/default/objects/Deal_Registration__c/fields/Rejection_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Other_Reason__c</fullName>
    <label>Rejection Other Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>