force-app/main/default/objects/Deal_Registration__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Exceeds deal size threshold</fullName>
            </value>
            <value>
                <fullName>Existing opp with another partner</fullName>
            </value>
            <value>
                <fullName>Registered with another partner</fullName>
            </value>
            <value>
                <fullName>No active opportunity</fullName>
            </value>
            <value>
                <fullName>No meeting set with customer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>