force-app/main/default/objects/Deal_Registration__c/fields/Remainder_Expiry_Notification_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Remainder_Expiry_Notification_Sent_Date__c</fullName>
    <label>Remainder Expiry Notification Sent Date</label>
    <type>Date</type>
</CustomField>