force-app/main/default/objects/Deal_Registration__c/fields/Replacing_existing_environment__c.field-meta.xml
<CustomField>
    <fullName>Replacing_existing_environment__c</fullName>
    <description>Created as part of PRIT26-543</description>
    <label>Replacing existing environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>