force-app/main/default/objects/Deal_Registration__c/fields/Requested_for_Extension__c.field-meta.xml
<CustomField>
    <fullName>Requested_for_Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requested for Extension</label>
    <type>Checkbox</type>
</CustomField>