force-app/main/default/objects/Deal_Registration__c/fields/rerun_PatchManager_Assignments__c.field-meta.xml
<CustomField>
    <fullName>rerun_PatchManager_Assignments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>rerun PatchManager Assignments</label>
    <type>Checkbox</type>
</CustomField>