force-app/main/default/objects/Deal_Registration__c/fields/Rubrik_Complete_Edition_Reg__c.field-meta.xml
<CustomField>
    <fullName>Rubrik_Complete_Edition_Reg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEP Rubrik Complete Edition Registration</label>
    <type>Checkbox</type>
</CustomField>