force-app/main/default/objects/Deal_Registration__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales manager for alliance DR approval</description>
    <label>Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Registrations3</relationshipName>
    <type>Lookup</type>
</CustomField>