force-app/main/default/objects/Deal_Registration__c/fields/Save_the_Data_Event__c.field-meta.xml
<CustomField>
    <fullName>Save_the_Data_Event__c</fullName>
    <label>D Opportunity from a Save the Data Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>