force-app/main/default/objects/Deal_Registration__c/fields/Scope_of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Opportunity__c</fullName>
    <label>Scope of Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backup-as-a-Service</fullName>
            </value>
            <value>
                <fullName>Replication-as-a-Service</fullName>
            </value>
            <value>
                <fullName>Disaster Recovery-as-a-Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>