force-app/main/default/objects/Deal_Registration__c/fields/Scope_of_Opportunity_Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Opportunity_Additional_Details__c</fullName>
    <label>Scope of Opportunity(Additional Details)</label>
    <type>TextArea</type>
</CustomField>