force-app/main/default/objects/Deal_Registration__c/fields/SDR__c.field-meta.xml
<CustomField>
    <fullName>SDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDR for the Deal. Populated from Patch Manager</description>
    <label>SDR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Registrations1</relationshipName>
    <type>Lookup</type>
</CustomField>