force-app/main/default/objects/Deal_Registration__c/fields/Secondary_Email_for_Deal_Reg__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email_for_Deal_Reg__c</fullName>
    <label>Secondary Email for Deal Reg</label>
    <type>Email</type>
</CustomField>