force-app/main/default/objects/Deal_Registration__c/fields/Sell_to_Partner__c.field-meta.xml
<CustomField>
    <fullName>Sell_to_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sell to Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Registrations (Sell to Partner)</relationshipLabel>
    <relationshipName>Deal_Registrations3</relationshipName>
    <type>Lookup</type>
</CustomField>