force-app/main/default/objects/Deal_Registration__c/fields/Send_Expiry_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Expiry_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Expiry Notification</label>
    <type>Checkbox</type>
</CustomField>