force-app/main/default/objects/Deal_Registration__c/fields/SLA_Violation__c.field-meta.xml
<CustomField>
    <fullName>SLA_Violation__c</fullName>
    <formula>OR(SLA_Violation_Check__c, AND(Age__c &gt; 2, ISPICKVAL(Deal_Registration_Status__c, &apos;Submitted&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(DEPRECATED) SLA Violation</label>
    <type>Checkbox</type>
</CustomField>