force-app/main/default/objects/Deal_Registration__c/fields/SLA_Violation_Check__c.field-meta.xml
<CustomField>
    <fullName>SLA_Violation_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Technical field to maintain SLA violation flag.</description>
    <label>(DEPRECATED) SLA Violation Check</label>
    <type>Checkbox</type>
</CustomField>