force-app/main/default/objects/Deal_Registration__c/fields/Source_of_the_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Source_of_the_Opportunity__c</fullName>
    <label>Source of the Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner Sourced</fullName>
            </value>
            <value>
                <fullName>MSP Sourced</fullName>
            </value>
            <value>
                <fullName>Rubrik Sourced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>