force-app/main/default/objects/Deal_Registration__c/fields/Status_Before_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Status_Before_Expiry__c</fullName>
    <description>This field will track Deal Registration Status before it is marked as expired</description>
    <label>Status Before Expiry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>