force-app/main/default/objects/Deal_Registration__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>We no longer need the TART fields that come from Patch Manager (confirmed by ChannelOps - Gregg Schroeder).</description>
    <formula>PatchManager__r.TLevel4__c</formula>
    <label>(DEPRECATED) Territory</label>
    <type>Text</type>
</CustomField>