force-app/main/default/objects/Deal_Registration__c/fields/Theatre__c.field-meta.xml
<CustomField>
    <fullName>Theatre__c</fullName>
    <description>We no longer need the TART fields that come from Patch Manager (confirmed by ChannelOps - Gregg Schroeder).</description>
    <formula>TEXT(PatchManager__r.TLevel1__c)</formula>
    <label>(DEPRECATED) Theatre</label>
    <type>Text</type>
</CustomField>