force-app/main/default/objects/Deal_Registration__c/fields/Theatre_VP__c.field-meta.xml
<CustomField>
    <fullName>Theatre_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://rubrik.atlassian.net/browse/PRIT24-648</description>
    <label>VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Registrations5</relationshipName>
    <type>Lookup</type>
</CustomField>