force-app/main/default/objects/Deal_Registration__c/fields/Utility_Shared_Licensing__c.field-meta.xml
<CustomField>
    <fullName>Utility_Shared_Licensing__c</fullName>
    <label>Utility Shared Licensing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>