force-app/main/default/objects/Deal_Registration__c/fields/Utility_Shared_Licensing_Why__c.field-meta.xml
<CustomField>
    <fullName>Utility_Shared_Licensing_Why__c</fullName>
    <label>Utility Shared Licensing Why</label>
    <type>TextArea</type>
</CustomField>