force-app/main/default/objects/Deal_Registration__c/recordTypes/Alliance.recordType-meta.xml
<RecordType>
    <fullName>Alliance</fullName>
    <active>true</active>
    <label>Alliance</label>
</RecordType>