force-app/main/default/objects/Deal_Registration__c/recordTypes/Engagement.recordType-meta.xml
<RecordType>
    <fullName>Engagement</fullName>
    <active>true</active>
    <label>Engagement</label>
</RecordType>